--- a/flaskblog/templates/error/500.html
+++ b/flaskblog/templates/error/500.html
@@ -1,5 +1,9 @@
+{% extends "base.html" %}
+
+{% block content %}
 <br>
 <center>
     <h1>500 Error</h1>
     <h1>Internal Server Error - Try Again</h1>
 </center>
+{% endblock %}
