--- a/flaskblog/templates/user_management/add_user.html
+++ b/flaskblog/templates/user_management/add_user.html
@@ -21,6 +21,10 @@
             
         {{ form.email.label }}
         {{ form.email(class="form-control") }}
+        <br>
+            
+        {{ form.mobile.label }}
+        {{ form.mobile(class="form-control") }}
             
         {{ form.submit(class="mt-3 btn btn-secondary") }}
     </form>
@@ -34,6 +38,7 @@
             <th>ID</th>
             <th>Name</th>
             <th>Email</th>
+            <th>Mobile</th>
         </tr>
     </thead>
     <tbody>
@@ -42,6 +47,7 @@
                 <td>{{ user.id }}</td> 
                 <td><a href="{{ url_for('update_user', id=user.id) }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">{{ user.name }}</a></td> 
                 <td>{{ user.email }}</td>
+                <td>{{ user.mobile }}</td>
             </tr>
         {% endfor %}
     </tbody>
