--- a/flaskblog/templates/user_management/update_user.html
+++ b/flaskblog/templates/user_management/update_user.html
@@ -21,6 +21,10 @@
             
         {{ form.email.label }}
         {{ form.email(class="form-control", value=user_to_update.email) }}
+        <br>
+            
+        {{ form.mobile.label }}
+        {{ form.mobile(class="form-control", value=user_to_update.mobile) }}
             
         {{ form.submit(class="mt-3 btn btn-secondary") }}
     </form>
