--- a/flaskblog/templates/navbar.html
+++ b/flaskblog/templates/navbar.html
@@ -13,7 +13,7 @@
             <a class="nav-link" href="{{ url_for('name') }}">Name</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('add_user') }}">New User</a>
+            <a class="nav-link" href="{{ url_for('add_user') }}">User</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
