--- a/flaskblog/templates/user_management/update_user.html
+++ b/flaskblog/templates/user_management/update_user.html
@@ -27,6 +27,8 @@
         {{ form.mobile(class="form-control", value=user_to_update.mobile) }}
             
         {{ form.submit(class="mt-3 btn btn-secondary") }}
+        <a href="{{ url_for('delete_user', id=user_to_update.id) }}" class="mt-3 btn btn-danger">Remove</a>
+
     </form>
 </div>
 
