--- a/flaskblog/templates/user_management/add_user.html
+++ b/flaskblog/templates/user_management/add_user.html
@@ -25,6 +25,14 @@
             
         {{ form.mobile.label }}
         {{ form.mobile(class="form-control") }}
+        <br>
+            
+        {{ form.password_hash.label }}
+        {{ form.password_hash(class="form-control") }}
+        <br>
+
+        {{ form.password_hash2.label }}
+        {{ form.password_hash2(class="form-control") }}
             
         {{ form.submit(class="mt-3 btn btn-secondary") }}
     </form>
