--- a/flaskblog/templates/navbar.html
+++ b/flaskblog/templates/navbar.html
@@ -15,6 +15,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('add_user') }}">User</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('add_post') }}">Blog Post</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
