add post management

--- a/flaskblog/templates/user_management/add_user.html
+++ b/flaskblog/templates/user_management/add_user.html
@@ -18,6 +18,10 @@
         {{ form.name.label }}
         {{ form.name(class="form-control") }}
         <br>
+
+        {{ form.username.label }}
+        {{ form.username(class="form-control") }}
+        <br>
             
         {{ form.email.label }}
         {{ form.email(class="form-control") }}
@@ -45,6 +49,7 @@
         <tr>
             <th>ID</th>
             <th>Name</th>
+            <th>Username</th>
             <th>Email</th>
             <th>Mobile</th>
             <th>Action</th>
@@ -55,6 +60,7 @@
             <tr>
                 <td>{{ user.id }}</td> 
                 <td><a href="{{ url_for('update_user', id=user.id) }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">{{ user.name }}</a></td> 
+                <td>{{ user.username }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.mobile }}</td>
                 <td><a href="{{ url_for('delete_user', id=user.id) }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Remove</a></td>
