--- a/flaskblog/templates/navbar.html
+++ b/flaskblog/templates/navbar.html
@@ -16,7 +16,7 @@
             <a class="nav-link" href="{{ url_for('add_user') }}">User</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('add_post') }}">Blog Post</a>
+            <a class="nav-link" href="{{ url_for('posts') }}">Posts</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
