--- a/flaskblog/templates/post_management/update_post.html
+++ b/flaskblog/templates/post_management/update_post.html
@@ -9,7 +9,7 @@
     </div>
 {% endfor %}
 
-<h4>Add Blog Post</h4>
+<h4>Update Post</h4>
 
 <a href="{{ url_for('posts')}}" class="float-end btn btn-secondary">Back</a>
 
@@ -35,6 +35,7 @@
         {{ form.content(class="form-control", rows=5) }}
         
         {{ form.submit(class="mt-3 btn btn-secondary") }}
+
     </form>
 </div>
 
