tidy up code and separate into blueprint, model and form file

--- a/flaskblog/templates/post_management/add_post.html
+++ b/flaskblog/templates/post_management/add_post.html
@@ -11,7 +11,7 @@
 
 <h4>Add Blog Post</h4>
 
-<a href="{{ url_for('posts')}}" class="float-end btn btn-secondary">Back</a>
+<a href="{{ url_for('post_management.posts')}}" class="float-end btn btn-secondary">Back</a>
 
 <br><br>
 
