--- a/flaskblog/templates/user_management/add_user.html
+++ b/flaskblog/templates/user_management/add_user.html
@@ -59,11 +59,11 @@
         {% for user in user_list %}
             <tr>
                 <td>{{ user.id }}</td> 
-                <td><a href="{{ url_for('update_user', id=user.id) }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">{{ user.name }}</a></td> 
+                <td><a href="{{ url_for('user_management.update_user', id=user.id) }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">{{ user.name }}</a></td> 
                 <td>{{ user.username }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.mobile }}</td>
-                <td><a href="{{ url_for('delete_user', id=user.id) }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Remove</a></td>
+                <td><a href="{{ url_for('user_management.delete_user', id=user.id) }}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Remove</a></td>
             </tr>
         {% endfor %}
     </tbody>
