--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -9,33 +9,21 @@
     </div>
 {% endfor %}
 
-<h4>Update Post</h4>
-
-<a href="{{ url_for('post_management.posts')}}" class="float-end btn btn-secondary">Back</a>
-
+<h4>Login</h4>
 <br><br>
 
 <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
     <form method="POST">
         {{ form.hidden_tag() }}
 
-        {{ form.title.label }}
-        {{ form.title(class="form-control") }}
+        {{ form.username.label }}
+        {{ form.username(class="form-control") }}
         <br>
-            
-        {{ form.author.label }}
-        {{ form.author(class="form-control") }}
-        <br>
-            
-        {{ form.slug.label }}
-        {{ form.slug(class="form-control") }}
-        <br>
-            
-        {{ form.content.label }}
-        {{ form.content(class="form-control", rows=5) }}
-        
-        {{ form.submit(class="mt-3 btn btn-secondary") }}
 
+        {{ form.password.label }}
+        {{ form.password(class="form-control") }}
+            
+        {{ form.submit(class="mt-3 btn btn-secondary") }}
     </form>
 </div>
 
