--- a/flaskblog/templates/user_management/update_user.html
+++ b/flaskblog/templates/user_management/update_user.html
@@ -19,6 +19,10 @@
         {{ form.name(class="form-control", value=user_to_update.name) }}
         <br>
             
+        {{ form.username.label }}
+        {{ form.username(class="form-control", value=user_to_update.username) }}
+        <br>
+            
         {{ form.email.label }}
         {{ form.email(class="form-control", value=user_to_update.email) }}
         <br>
@@ -27,7 +31,7 @@
         {{ form.mobile(class="form-control", value=user_to_update.mobile) }}
             
         {{ form.submit(class="mt-3 btn btn-secondary") }}
-        <a href="{{ url_for('delete_user', id=user_to_update.id) }}" class="mt-3 btn btn-danger">Remove</a>
+        <a href="{{ url_for('user_management.delete_user', id=user_to_update.id) }}" class="mt-3 btn btn-danger">Remove</a>
 
     </form>
 </div>
