--- a/flaskblog/templates/user_management/update_user.html
+++ b/flaskblog/templates/user_management/update_user.html
@@ -9,31 +9,39 @@
     </div>
 {% endfor %}
 
-<h4>Update User</h4>
+{% if user_to_update.id == current_user.id %}
 
-<div class="shadow p-3 mb-5 bg-body-tertiary rounded">
-    <form accept="/user/update/{{ user_to_update.id }}" method="POST">
-        {{ form.hidden_tag() }}
+    <h4>Update User</h4>
 
-        {{ form.name.label }}
-        {{ form.name(class="form-control", value=user_to_update.name) }}
-        <br>
-            
-        {{ form.username.label }}
-        {{ form.username(class="form-control", value=user_to_update.username) }}
-        <br>
-            
-        {{ form.email.label }}
-        {{ form.email(class="form-control", value=user_to_update.email) }}
-        <br>
-            
-        {{ form.mobile.label }}
-        {{ form.mobile(class="form-control", value=user_to_update.mobile) }}
-            
-        {{ form.submit(class="mt-3 btn btn-secondary") }}
-        <a href="{{ url_for('user_management.delete_user', id=user_to_update.id) }}" class="mt-3 btn btn-danger">Remove</a>
+    <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
+        <form accept="/user/update/{{ user_to_update.id }}" method="POST">
+            {{ form.hidden_tag() }}
 
-    </form>
-</div>
+            {{ form.name.label }}
+            {{ form.name(class="form-control", value=user_to_update.name) }}
+            <br>
+                
+            {{ form.username.label }}
+            {{ form.username(class="form-control", value=user_to_update.username) }}
+            <br>
+                
+            {{ form.email.label }}
+            {{ form.email(class="form-control", value=user_to_update.email) }}
+            <br>
+                
+            {{ form.mobile.label }}
+            {{ form.mobile(class="form-control", value=user_to_update.mobile) }}
+                
+            {{ form.submit(class="mt-3 btn btn-secondary") }}
+            <a href="{{ url_for('user_management.delete_user', id=user_to_update.id) }}" class="mt-3 btn btn-danger">Remove</a>
+
+        </form>
+    </div>
+{% else %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>Sorry, You Can't Edit This User...</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{% endif %}
 
 {% endblock %}
