--- a/flaskblog/templates/post_management/add_post.html
+++ b/flaskblog/templates/post_management/add_post.html
@@ -32,6 +32,8 @@
         
         {{ form.submit(class="mt-3 btn btn-secondary") }}
     </form>
+    {{ ckeditor.load() }}
+    {{ ckeditor.config(name='content' )}}
 </div>
 
 {% endblock %}
