--- a/flaskblog/templates/post_management/post.html
+++ b/flaskblog/templates/post_management/post.html
@@ -25,7 +25,7 @@
 
 <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
     <h4>{{ post.title }}</h4>
-    <p class="mt-4">{{ post.content }}</p>
+    <p class="mt-4">{{ post.content|safe }}</p>
     <p class="small text-muted text-end">By: {{ post.user.name }} | {{ post.date_posted }}
 </div>
 
