--- a/flaskblog/templates/post_management/posts.html
+++ b/flaskblog/templates/post_management/posts.html
@@ -16,7 +16,7 @@
 {% for post in posts %}
     <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
         <h4>{{ post.title }}</h4>
-        <p class="mt-4 text-truncate">{{ post.content }}</p>
+        <p class="mt-4 text-truncate">{{ post.content|safe }}</p>
         <p class="small text-muted">
             <span><a href="{{ url_for('post_management.post', id=post.id)}}" class="text-decoration-none">View</a></span>
             <span class="float-end">By: {{ post.user.name }} | {{ post.date_posted }}</span>
