--- a/flaskblog/templates/post_management/update_post.html
+++ b/flaskblog/templates/post_management/update_post.html
@@ -33,6 +33,8 @@
         {{ form.submit(class="mt-3 btn btn-secondary") }}
 
     </form>
+    {{ ckeditor.load() }}
+    {{ ckeditor.config(name='content' )}}
 </div>
 
 {% endblock %}
