--- a/flaskblog/templates/navbar.html
+++ b/flaskblog/templates/navbar.html
@@ -11,6 +11,11 @@
           </li>
           {% if current_user.is_authenticated %}
             <li class="nav-item">
+              {% if current_user.id == 11 %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('admin.admin') }}">Admin</a>
+                </li>
+              {% endif %}
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('user_management.add_user') }}">User</a>
               </li>
