--- a/flaskblog/templates/search.html
+++ b/flaskblog/templates/search.html
@@ -4,15 +4,21 @@
 
 <h4>Search Result</h4>
 <br><br>
-{% for post in posts %}
+{% if posts %}
+    {% for post in posts %}
+        <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
+            <h4>{{ post.title }}</h4>
+            <p class="mt-4 text-truncate">{{ post.content }}</p>
+            <p class="small text-muted">
+                <span><a href="{{ url_for('post_management.post', id=post.id)}}" class="text-decoration-none">View</a></span>
+                <span class="float-end">By: {{ post.user.name }} | {{ post.date_posted }}</span>
+            </p>
+        </div>
+    {% endfor %}
+{% else %}
     <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
-        <h4>{{ post.title }}</h4>
-        <p class="mt-4 text-truncate">{{ post.content }}</p>
-        <p class="small text-muted">
-            <span><a href="{{ url_for('post_management.post', id=post.id)}}" class="text-decoration-none">View</a></span>
-            <span class="float-end">By: {{ post.user.name }} | {{ post.date_posted }}</span>
-        </p>
+        <h5 class="text-center fst-italic">Sorry, your search term: <strong>{{ search_input }}</strong> was not found ...</h5>
     </div>
-{% endfor %}
+{% endif %}
 
 {% endblock %}
