--- a/flaskblog/templates/user_management/update_user.html
+++ b/flaskblog/templates/user_management/update_user.html
@@ -31,6 +31,10 @@
                 
             {{ form.mobile.label }}
             {{ form.mobile(class="form-control", value=user_to_update.mobile) }}
+            <br>
+                
+            {{ form.about_author.label }}
+            <textarea name="about_author" class="form-control" rows="5">{{ user_to_update.about_author }}</textarea>
                 
             {{ form.submit(class="mt-3 btn btn-secondary") }}
             <a href="{{ url_for('user_management.delete_user', id=user_to_update.id) }}" class="mt-3 btn btn-danger">Remove</a>
