--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -13,7 +13,7 @@
     {% include "navbar.html" %}
     <br>
 
-    <div class="container">
+    <div class="container mt-3 mb-5">
         {% block content %}{% endblock %}
     </div>
     
