--- a/flaskblog/templates/dashboard.html
+++ b/flaskblog/templates/dashboard.html
@@ -16,9 +16,13 @@
     <div class="card-header">
         {{ current_user.username }}
     </div>
-    <div class="d-inline-flex">
+    <div class="row">
         <div class="col-md-3 p-4 d-flex align-items-center justify-content-center">
-            <img src="{{ url_for('static', filename='images/user.png') }}" class="img-fluid rounded-start" width="150" height="150">
+            {% if current_user.profile_pic %}
+                <img src="{{ url_for('static', filename='images/' + current_user.profile_pic) }}" class="img-fluid rounded" width="150" height="150">
+            {% else %}
+                <img src="{{ url_for('static', filename='images/user.png') }}" class="img-fluid rounded-start" width="150" height="150">
+            {% endif %}
         </div>
         <div class="col-md-9 p-4">
             <div class="card-body">
