solve bug (post user image from current user to post user)

--- a/flaskblog/templates/navbar.html
+++ b/flaskblog/templates/navbar.html
@@ -19,12 +19,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('user_management.add_user') }}">User</a>
               </li>
-              <li class="nav-item">
+              <!--<li class="nav-item">
                 <a class="nav-link" href="{{ url_for('user_management.name') }}">Name</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('user_management.profile', name='Yunna') }}">Profile</a>
-              </li>
+              </li>-->
               <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </li>
           {% else %}
